@@ -21,6 +21,9 @@ mz_zip_archive* za_new(const QString &zip_path, ZaType za_type);
 // returns info about the file contained in the archive
 mz_zip_archive_file_stat za_file_stat(mz_zip_archive* pZip, int file_index);
 
+// same, but with preliminary type cast void* --> mz_zip_archive*
+mz_zip_archive_file_stat za_file_stat(void* pZip, int file_index);
+
 // closes and deletes the archive
 bool za_close(mz_zip_archive* pZip);
 
