@@ -1,4 +1,6 @@
 QMicroz v0.4
+* It is now possible to request extended information about items contained in the archive.
+    For example, get the modification date or compressed/uncompressed size.
 * Header files merged.
     (qmicroz_global.h --> qmicroz.h)
 
